<resources>
    <string name="app_name">GlobalPay Sample App</string>
    <string name="transactions">Transactions</string>
    <string name="gp_api">GP API</string>
    <string name="gp_api_configuration">GP API Configuration</string>
    <string name="result">Result:</string>
    <string name="payment_methods">Stored Payment Methods</string>
    <string name="deposits">Deposits</string>
    <string name="disputes">Disputes</string>
    <string name="transaction_report">Transaction Report</string>
    <string name="payment_method_report">Payment Method Report</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="transaction_operations">Transaction Operations</string>
    <string name="id">ID:</string>
    <string name="payment_method_id">Payment Method ID:</string>
    <string name="header_payment_method">Payment Method</string>
    <string name="time_created">Time Created:</string>
    <string name="status">Status:</string>
    <string name="type">Type:</string>
    <string name="channel">Channel:</string>
    <string name="config_channel">CHANNEL</string>
    <string name="amount">Amount:</string>
    <string name="currency">Currency:</string>
    <string name="manual_entry_mode">Manual Entry Mode:</string>
    <string name="reference">Reference:</string>
    <string name="client_transaction_id">Client Transaction ID:</string>
    <string name="batch_id">Batch ID:</string>
    <string name="country">Country:</string>
    <string name="original_transaction_id">Original Transaction ID:</string>
    <string name="gateway_response_message">Gateway Response Message:</string>
    <string name="entry_mode">Entry Mode:</string>
    <string name="card_type">Card Type:</string>
    <string name="auth_code">Auth Code:</string>
    <string name="aquirer_reference_number">Aquirer Reference Number:</string>
    <string name="masked_card_number">Masked Card Number:</string>
    <string name="sort_by_property">Sort by property:</string>
    <string name="sort_order">Sort order:</string>
    <string name="page">Page:</string>
    <string name="default_page">1</string>
    <string name="page_size">Page size:</string>
    <string name="default_page_size">5</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="empty">Empty</string>
    <string name="empty_list">Empty list</string>
    <string name="account_name">Account Name:</string>
    <string name="card_brand">Card Brand:</string>
    <string name="brand_reference">Brand Reference:</string>
    <string name="reference_number">Reference Number:</string>
    <string name="transaction_status">Transaction Status:</string>
    <string name="deposit_reference">Deposit Reference:</string>
    <string name="merchant_id">Merchant ID:</string>
    <string name="api_key">API Key (Netcetera):</string>
    <string name="system_hierarchy">System Hierarchy:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="start_deposit_date">Start Deposit Date:</string>
    <string name="end_deposit_date">End Deposit Date:</string>
    <string name="start_batch_date">Start Batch Date:</string>
    <string name="end_batch_date">End Batch Date:</string>
    <string name="submit">Submit</string>
    <string name="report_parameters">Report Parameters</string>
    <string name="payment_card">Payment card</string>
    <string name="payment_id">Id:</string>
    <string name="payment_card_model">Payment card model</string>
    <string name="card_number">Card Number:</string>
    <string name="card_number_last_4">Card Number Last 4:</string>
    <string name="expiry_month">Expiry month:</string>
    <string name="expiry_year">Expiry year:</string>
    <string name="cvn_cvv">CVN/CVV:</string>
    <string name="payment_LNK_id">Payment Link Id:</string>
    <string name="default_amount">15.99</string>
    <string name="transaction_data">Transaction data</string>
    <string name="transaction_type">Transaction type:</string>
    <string name="fraud_mode">Fraud mode:</string>
    <string name="select_multi_token_type">Tokenize card before transaction:</string>
    <string name="token_usage_mode">Token usage mode</string>
    <string name="finger_print_usage_mode">Finger Print usage mode</string>
    <string name="result_code">Result Code:</string>
    <string name="liability_shift">Liability Shift:</string>
    <string name="token_id">Token ID:</string>
    <string name="card_expiry_month">Card Expiry Month:</string>
    <string name="card_expiry_year">Card Expiry Year:</string>
    <string name="get_transaction_list">Get Transaction List</string>
    <string name="get_transaction_by_id">Get Transaction By ID</string>
    <string name="get_payment_methods_list">List</string>
    <string name="get_payment_method_by_id">By Id</string>
    <string name="payment_method_operations">Payment Method Operations</string>
    <string name="initiate_payment_method_operation">Initiate Payment Method Operation</string>
    <string name="payment_operation">Payment operation</string>
    <string name="payment_method_parameters">Payment method parameters</string>
    <string name="default_payment_method_id">PMT_98e6cbbb-8faf-4134-bfa1-f2cf3a72872f</string>
    <string name="default_test_document_id">DOC_MyEvidence_234234AVCDE-1</string>
    <string name="create_access_token">Create Access Token</string>
    <string name="access_token">Access Token</string>
    <string name="access_token_parameters">Access Token Parameters</string>
    <string name="app_id">App ID:</string>
    <string name="app_key">App Key:</string>
    <string name="seconds_to_expire">Seconds To Expire:</string>
    <string name="default_seconds_to_expire">60000</string>
    <string name="environment">Environment:</string>
    <string name="interval_to_expire">Interval To Expire:</string>
    <string name="set_permissions">Set Permissions:</string>
    <string name="token">Token:</string>
    <string name="data_account_name">Data Account Name:</string>
    <string name="dispute_management_account_name">Dispute Management Account Name:</string>
    <string name="tokenization_account_name">Tokenization Account Name:</string>
    <string name="transaction_processing_account_name">Transaction Processing Account Name:</string>
    <string name="verifications">Verifications</string>
    <string name="get_deposits_list">Get Deposits List</string>
    <string name="get_deposit_by_id">Get Deposit By Id</string>
    <string name="deposit_id">Deposit ID:</string>
    <string name="disputes_report">Disputes Report</string>
    <string name="dispute_operations">Dispute Operations</string>
    <string name="get_disputes_list">Get Dispute List</string>
    <string name="get_dispute_by_id">Get Dispute By Id</string>
    <string name="dispute_id">Dispute ID:</string>
    <string name="initiate_dispute_operation">Initiate Dispute Operation</string>
    <string name="dispute_operation_parameters">Dispute operation parameters</string>
    <string name="default_test_dispute_id">DIS_SAND_abcd1234</string>
    <string name="initiate_verification">Initiate Verification</string>
    <string name="verification_operation_parameters">Verification operation parameters</string>
    <string name="operation_type">Operation type:</string>
    <string name="document_type">Document type:</string>
    <string name="dispute_documents">Dispute documents:</string>
    <string name="base64_content">Base64 content:</string>
    <string name="default_test_base64_content">R0lGODlhigPCAXAAACwAAAAAigPCAYf8AQnvR0lgPCAYf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvf8AQnvR0lGODlhigPCAXAAACwAAAAAigQnvR0lGODlhigPCAXAAACwAAAAAigPCAYf8ACAXAAACwAAAAAigPCAYf8AQnv</string>
    <string name="add_document">Add Document</string>
    <string name="remove_document">Remove Document</string>
    <string name="file_name">File name:</string>
    <string name="show_as_base64_encoded_string">Show as Base64 Encoded String</string>
    <string name="select_document_file">Select Document File</string>
    <string name="added_documents">Added documents:</string>
    <string name="clear_and_close">Clear &amp; Close</string>
    <string name="add">Add</string>
    <string name="document_file">Document file:</string>
    <string name="press_to_select_a_file">Press to select a file</string>
    <string name="add_document_file">Add Document file:</string>
    <string name="please_select_a_document_file">Please select a document file !</string>
    <string name="error_no_app_to_handle_action">There are no applications available to handle this action.</string>
    <string name="common_error_unknown">Something went wrong, please try again.</string>
    <string name="get_document_by_id">Document By Id</string>
    <string name="get_dispute_by_deposit_id">By Deposit Id</string>
    <string name="document_id">Document ID:</string>
    <string name="export_as_pdf_file">Export As PDF File</string>
    <string name="view_as_pdf_file">View As PDF File</string>
    <string name="dispute_document">Dispute document</string>
    <string name="base64_content_preview">Base64 Content Preview:</string>
    <string name="success">Success !</string>
    <string name="loading">LOADING…</string>
    <string name="merchand_id_configuration"><b>MERCHANT ID</b></string>
    <string name="app_id_configuration"><b>APP ID</b> (required)</string>
    <string name="app_key_configuration"><b>APP KEY</b> (required)</string>
    <string name="service_url_configuration"><b>SERVICE URL</b> (optional)</string>
    <string name="challenge_url_configuration"><b>CHALLENGE NOTIFICATION URL</b></string>
    <string name="method_url_configuration"><b>METHOD NOTIFICATION URL</b></string>
    <string name="api_version_configuration"><b>API VERSION</b> (optional)</string>
    <string name="token_seconds_to_expire_configuration"><b>TOKEN - SECONDS TO EXPIRE</b></string>
    <string name="x_gp_sdk_version">X-GP-SDK VERSION</string>
    <string name="x_gp_library_version">X-GP-LIBRARY VERSION</string>
    <string name="version_default">1.0.0</string>
    <string name="select_country_configuration"><b>SELECT YOUR COUNTRY</b></string>
    <string name="token_interval_to_expire_configuration"><b>TOKEN - INTERVAL TO EXPIRE</b></string>
    <string name="select_card_present_configuration">CARD PRESENT CONFIGURATION</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="empty_required_field">Empty required field !</string>
    <string name="invalid_service_url">Invalid service url !</string>
    <string name="invalid_date_format">Invalid date format !  Should be: "yyyy-MM-dd"</string>
    <string name="order_by">Order by:</string>
    <string name="order">Order:</string>
    <string name="brand">Brand:</string>
    <string name="system_mid">System MID:</string>
    <string name="arn">ARN:</string>
    <string name="stage">Stage:</string>
    <string name="from_stage_time_created">From Stage Time Created:</string>
    <string name="to_stage_time_created">To Stage Time Created:</string>
    <string name="adjustment_funding">Adjustment Funding:</string>
    <string name="from_adjustment_time_created">From Adjustment Time Created:</string>
    <string name="to_adjustment_time_created">To Adjustment Time Created:</string>
    <string name="get_from_settlements">Get from settlements ?</string>
    <string name="actions_report">Actions</string>
</resources>