<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:animateLayoutChanges="true"
        android:columnCount="2"
        android:orientation="horizontal"
        android:useDefaultMargins="true">

        <TextView
            style="@style/Dialog.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/size_16dp"
            android:text="@string/access_token_parameters"
            android:textAlignment="center" />

        <TextView
            style="@style/Dialog.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/app_id" />

        <EditText
            android:id="@+id/etAppId"
            style="@style/Dialog.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1.5"
            android:hint="@string/empty"
            android:background="@null"
            android:paddingStart="@dimen/size_8dp"
            android:paddingEnd="@dimen/size_8dp" />

        <TextView
            style="@style/Dialog.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/app_key" />

        <EditText
            android:id="@+id/etAppKey"
            style="@style/Dialog.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1.5"
            android:background="@null"
            android:hint="@string/empty"
            android:paddingStart="@dimen/size_8dp"
            android:paddingEnd="@dimen/size_8dp" />

        <TextView
            style="@style/Dialog.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/seconds_to_expire" />

        <EditText
            android:id="@+id/etSecondsToExpire"
            style="@style/Dialog.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1.5"
            android:background="@null"
            android:inputType="number"
            android:paddingStart="@dimen/size_8dp"
            android:paddingEnd="@dimen/size_8dp"
            android:text="@string/default_seconds_to_expire" />

        <TextView
            style="@style/Dialog.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/environment" />

        <com.globalpayments.android.sdk.sample.common.views.CustomSpinner
            android:id="@+id/environmentSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1.5" />

        <TextView
            style="@style/Dialog.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/interval_to_expire" />

        <com.globalpayments.android.sdk.sample.common.views.CustomSpinner
            android:id="@+id/intervalToExpireSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSubmit"
            style="@style/Button.Big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/submit" />

    </GridLayout>
</androidx.core.widget.NestedScrollView>